# RetroShare

./: .gitignore  .gitlab-ci.yml  .gitmodules  .replit  .travis.yml  BOUNTY_COMPLETION_SUMMARY.md  BUILD-cmake.md  CMakeLists.txt  COMPLETION_STATUS.md  COPYING  GUI_IMPLEMENTATION_GUIDES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  ISSUE_3107_REVIEW_REPORT.md  LIBRETROSHARE_IMPLEMENTATION_PROMPT.md  LIBRETROSHARE_PROMPT.md  LIBRETROSHARE_TODO3_PROMPT.md  LIBRETROSHARE_WIKI_NOTIFICATION_IMPLEMENTATION.md  LIST_OF_NON_BACKWARD_COMPATIBLE_CHANGES_FOR_V07.txt  MacOS_X_InstallGuide.md  MacOS_X_InstallGuide.txt  Makefile  README-Android.asciidoc  README.asciidoc  README.md  README.txt  RetroShare.pro  RetroShare.pro.user.1175296  Start_RetroShare-Gui_Debug.bat  TASK.md  TASK1_COMPLETION_SUMMARY.md  TODO.circles.txt  TODO.txt  TODO_4_MAINWINDOW_INTEGRATION.md  TODO_6_SPECIFICATION.md  Wiki_Todos_V2.md  WindowsMSys2_InstallGuide.md  WindowsMSys2_InstallGuide.txt  android-prepare-toolchain.sh  appveyor.yml  (+14 more)
libbitdht/: CMakeLists.txt
libbitdht/src/: LICENSE.md  README.txt  libbitdht.pro  mingw32make.bat  use_libbitdht.pri
libbitdht/src/bitdht/: Makefile  README.txt  bdaccount.cc  bdaccount.h  bdboot.txt  bdboot_generate.sh  bdconnection.cc  bdconnection.h  bdfilter.cc  bdfilter.h  bdfilter.txt  bdfriendlist.cc  bdfriendlist.h  bdhash.cc  bdhash.h  bdhistory.cc  bdhistory.h  bdiface.h  bdmanager.cc  bdmanager.h  bdmsgs.cc  bdmsgs.h  bdnode.cc  bdnode.h  bdobj.cc  bdobj.h  bdpeer.cc  bdpeer.h  bdquery.cc  bdquery.h  bdquerymgr.cc  bdquerymgr.h  bdstddht.cc  bdstddht.h  bdstore.cc  bdstore.h  bencode.c  bencode.h
libbitdht/src/example/: Makefile  bdboot.txt  bdexample.cc  bdhandler.cc  bdhandler.h  bootstrap_fn.cc  bootstrap_fn.h  bssdht.cc
libbitdht/src/tests/: Makefile  bdbloom_makefilter.cc  bdbloom_test.cc  bdboot.txt  bdmetric_test.cc  bdmgr_multitest.cc  bdmidids_test.cc  bdmsgs_test.cc  bdnode_multitest1.cc  bdnode_test.cc  bdnode_test2.cc  bdquery_test.cc  bdspace_test.cc  bdspace_test2.cc  bdstore_test.cc  bdudp_test.cc  bencode_test.cc  udpbitdht_nettest.cc
libbitdht/src/udp/: udpbitdht.cc  udpbitdht.h  udpbitdht_nettest.cc  udplayer.cc  udplayer.h  udpproxylayer.h  udpstack.cc  udpstack.h
libbitdht/src/util/: bdbloom.cc  bdbloom.h  bdfile.cc  bdfile.h  bdnet.cc  bdnet.h  bdrandom.cc  bdrandom.h  bdstring.cc  bdstring.h  bdthreads.cc  bdthreads.h
libretroshare/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
libretroshare/misc/Android/: Dockerfile  README.asciidoc  generate_gdb_init_commands.sh  prepare-toolchain-clang.sh  pull_sysroot.sh  start_gdbserver.sh
libretroshare/src/: BUGS  CMakeLists.txt  Doxyfile  FAQ  LICENSE.txt  Makefile  README.odt  Readme.txt  Readme.txt-V0.2.1  TODO  libretroshare.pro  make.opt  mingw32make.bat  use_libretroshare.pri  version_detail.bat  version_detail.sh  version_detail_lib.ps1  version_detail_lib.sh
libretroshare/src/_commonfuncs/: commonfuncs.pri  getcurrentts.cc  getcurrentts.h
libretroshare/src/_dbase/: cachestrapper.cc  cachestrapper.h  dbase.pri
libretroshare/src/_dht/: b64.cc  b64.h  dht.pri  dht_bootstrap.cc  dht_bootstrap.h  dht_check_peers.cc  dht_check_peers.h  dhtclient.h  dhthandler.cc  dhthandler.h  odhtmgr_test.cc  odhtpost_test.cc  odhtstr_test.cc  opendht.cc  opendht.h  opendhtmgr.cc  opendhtmgr.h
libretroshare/src/_pqi/: authgpg.cc  authgpg.h  authssl.cc  authssl.h  authxpgp.cc  authxpgp.h  cleanupxpgp.cc  cleanupxpgp.h  p3authmgr.cc  p3authmgr.h  p3cfgmgr.cc  p3cfgmgr.h  p3connmgr.cc  p3connmgr.h  p3dhtmgr.cc  p3dhtmgr.h  p3notify.cc  p3notify.h  p3upnpmgr.h  pqi.h  pqi.pri  pqi_base.cc  pqi_base.h  pqiarchive.cc  pqiarchive.h  pqiassist.h  pqibin.cc  pqibin.h  pqihandler.cc  pqihandler.h  pqihash.cc  pqihash.h  pqiindic.cc  (+33 more)
openpgpsdk/: CMakeLists.txt
openpgpsdk/src/: accumulate.c  compress.c  create.c  crypto.c  errors.c  fingerprint.c  keyring.c  keyring_local.h  memory.c  openpgpsdk.pro  openssl_crypto.c  packet-parse.c  packet-print.c  packet-show.c  random.c  reader.c  reader_encrypted_se.c  reader_fd.c  readerwriter.c  signature.c  src.pro  symmetric.c  use_openpgpsdk.pri  use_openpgpsdk.pri.rej  util.c  validate.c  writer_armour.c  writer_encrypt_se_ip.c  writer_fd.c  writer_partial.c  writer_skey_checksum.c  writer_stream_encrypt_se_ip.c
plugins/FeedReader/: CMakeLists.txt  FeedReader.pro  FeedReaderPlugin.cpp  FeedReaderPlugin.h
plugins/VOIP/: AudioInputConfig.cpp  AudioInputConfig.h  AudioStats.cpp  AudioStats.h  AudioWizard.cpp  CMakeLists.txt  README.txt  SpeexProcessor.cpp  VOIP.pro  VOIPPlugin.cpp  VOIPPlugin.h  VOIP_images.qrc  audiodevicehelper.cpp  p3Voip.h  rsvoip.h  rsvoipitems.h
retroshare-friendserver/: CMakeLists.txt
retroshare-friendserver/src/: friendserver.cc  friendserver.h  fsitem.h  network.cc  network.h  retroshare-friendserver.cc  retroshare-friendserver.pro
retroshare-gui/: CMakeLists.txt
retroshare-gui/src/: CMakeLists.txt  Doxyfile  Info.plist  Info.plist.autosave  README.odt  README.txt  RetroShare.pro  Todo.txt  changelog.txt  cmark_export.h  cmark_version.h  main.cpp  mingw32make.bat  qmake_info.h.in  retroshare-gui.pro  retroshare-portable.nsi  retroshare-process.nsi  retroshare-ultramodern.nsi  retroshare.in  retroshare.nsi  rsMacIcon.icns  rsguiversion.h  rshare.cpp  rshare.h  svn_revision.bat  version_detail.bat  version_detail.sh  version_detail_gui.ps1  version_detail_gui.sh
retroshare-service/: CMakeLists.txt
retroshare-service/data/: retroshare-service.desktop
retroshare-service/src/: logo.icns  retroshare-service-android.cc  retroshare-service.cc  retroshare-service.inkscape.svg.license  retroshare-service.pro  retroshare-service_win.rc  retroshare-service_win.rc.h
supportlibs/pegmarkdown/: CMakeLists.txt  GLibFacade.c  GLibFacade.h  LICENSE  Makefile.orig  README.markdown  glib.h  markdown.c  markdown_lib.c  markdown_lib.h  markdown_output.c  markdown_parser.c  markdown_parser.leg  markdown_peg.h  odf.c  odf.h  parsing_functions.c  parsing_functions.h  pegmarkdown.pro  utility_functions.c  utility_functions.h
(+5957 files in other folders)
